--- a/src/app/components/start/start.component.html
+++ b/src/app/components/start/start.component.html
@@ -12,8 +12,8 @@
               <div class="tab-content" id="myTabContent">
                 <div class="tab-pane fade show active" id="register" role="tabpanel" aria-labelledby="register-tab">
                     <form id="registerForm">
-                        <input [formControl]="firstName" id="firstName" placeholder="First Name">
-                        <input [formControl]="lastName" id="lastName" placeholder="Last Name">
+                        <input [formControl]="first_name" id="first_name" placeholder="First Name">
+                        <input [formControl]="last_name" id="last_name" placeholder="Last Name">
                         <input [formControl]="email" id="email" placeholder="Email">
                         <input [formControl]="username" id="username" placeholder="username">
                         <input [formControl]="password" id="password" placeholder="password">
