--- a/src/app/components/student/student-hub/student-hub.component.html
+++ b/src/app/components/student/student-hub/student-hub.component.html
@@ -10,7 +10,7 @@
                 <some-element *ngSwitchDefault>
                     <div class="row d-flex align-items-center">
                         <div class="col-12 justify-content-center text-center">
-                            <h1>Hello {{user.firstName}}! What would you like to do?</h1>
+                            <h1 *ngIf="user.first_name">Hello {{user.first_name}}! What would you like to do?</h1>
                         </div>
                         <div class="col-12 col-lg-4 justify-content-center text-center mt-3">
                             <div (click)="setActivity('learn')" id="learn" class="card">
