--- a/src/app/components/student/account/account.component.html
+++ b/src/app/components/student/account/account.component.html
@@ -282,7 +282,6 @@
                                                       <button type="submit" class="btn btn-danger">
                                                         Delete
                                                       </button>
-                                                    <!-- <button type="submit" id="resetPasswordBtn" class="btn btn-primary">Reset Password</button> <span class="text-success ml-3" *ngIf="passwordUpdated">Password successfully reset!</span> -->
                                                 </form>
                                             
                                               </div>
@@ -294,18 +293,27 @@
                                 <div class="tab-pane fade" id="reset" role="tabpanel" aria-labelledby="reset-tab">
                                     <div class="row d-flex">
                                         <div class="col-12">
+                                            <form>
+                                                <table>
+                                                    <tr>
+                                                        <th class="tcol"></th>
+                                                        <th class="tcol top">Practice</th>
+                                                        <th class="tcol top">Test</th>
+                                                    </tr>
+                                                </table>
+                                                <table>
+                                                    <tr style="border-bottom: 1px solid gray">
+                                                        <th class="tcol">Reset Everything</th>
+                                                        <td><input type="checkbox" id="allP" name="allP" value="all-practice" (click)="togglePracticeCheck($event)"></td>
+                                                        <td><input type="checkbox" id="allT" name="allT" value="all-test" (click)="toggleTestCheck($event)"></td>                                                            
+                                                    </tr>
+                                                </table>                
+                                            </form>
+                                            
+
+
                                             <form id="resetForm" [formGroup]="resetForm" (submit)="resetStats()">
-                                            <table>
-                                                <tr>
-                                                    <th></th>
-                                                    <th>Practice</th>
-                                                    <th>Test</th>
-                                                </tr>
-                                                <tr>
-                                                    <th class="tcol">Reset Everything</th>
-                                                    <td><input type="checkbox" id="allP" name="allP" value="all-practice" formControlName="all_practice"></td>
-                                                    <td><input type="checkbox" id="allT" name="allT" value="all-test" formControlName="all_test"></td>     
-                                                </tr>
+                                            <table>            
                                                 <tr>
                                                     <th class="tcol">Ghunnah</th>
                                                     <td><input type="checkbox" id="ghunnahP" name="ghunnahP" value="ghunnah-practice" formControlName="ghunnah_practice"></td>
